[metadata]
name = plantable
description = Server for Seatable Webhook
long_description = file: README.md
author = Woojin Cho
author_email = w.cho@cj.net
keywords = 
license = MIT License

[options]
dependency_links = 
python_requires = >= 3.8
package_dir =
    =src
packages = find:
install_requires = 
    aioboto3
    aiohttp
    aiokafka
    asyncpg
    click
    click-loglevel
    clutter
    dataclasses-avroschema
    fastapi
    fastavro
    genson
    orjson
    parse
    pendulum
    pyarrow
    pypika
    python-dotenv
    python-multipart
    seatable-api
    sqlalchemy[asyncio]
    tabulate
    uvicorn
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
plantable =
    static/**/*
    static/**/.*
    static/.**/*
    static/.**/.*
    
[options.entry_points]
console_scripts =
    plantable = plantable.scripts:plantable
